--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     color: white;
-    background: rgb(228, 9, 9);
+    background: rgba(228, 9, 9, 0.274);
     margin: 0px;
     font-family: "Chakra Petch", sans-serif;
     margin-bottom: 100px;
